--- a/app/src/main/res/layout/fragment_thong_bao.xml
+++ b/app/src/main/res/layout/fragment_thong_bao.xml
@@ -2,12 +2,12 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/lstThongBao"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </ListView>
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
