--- a/app/src/main/res/layout/list_thong_bao.xml
+++ b/app/src/main/res/layout/list_thong_bao.xml
@@ -19,5 +19,10 @@
         android:text="11/10/2018"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <View
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="0.7dp"
+        android:background="#000000"/>
 
 </LinearLayout>
