--- a/app/src/main/res/layout/fragment_cham_cong.xml
+++ b/app/src/main/res/layout/fragment_cham_cong.xml
@@ -147,5 +147,28 @@
         </RelativeLayout>
 
     </LinearLayout>
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/LinearOTP"
+        android:gravity="center"
+        android:layout_marginTop="30dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+
+            android:inputType="number"
+            android:textColor="#000000"
+            android:id="@+id/edtOTP"
+            android:hint="Xin nhập mã xác thực"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/btnOTP"
+            android:text="Xác nhận"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp" />
+
+    </LinearLayout>
 
 </LinearLayout>
