--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -6,66 +6,89 @@
     android:layout_height="match_parent"
     tools:context=".View.DangKy"
     android:orientation="vertical">
+    <android.support.v7.widget.Toolbar
+        android:background="#c59783"
+        android:layout_alignParentTop="true"
+        android:id="@+id/toolbarDangKy"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        />
 
 
-    <EditText
-        android:hint="ID"
-        android:id="@+id/edtID"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:id="@+id/edtEmail"
-        android:hint="Email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:id="@+id/edtPass"
-        android:hint="Pass"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:id="@+id/edtHoTen"
-        android:hint="Họ tên"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:id="@+id/edtSDT"
-        android:hint="Số điện thoại"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:id="@+id/edtChucVu"
-        android:hint="Chức Vụ"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
     <LinearLayout
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/khung"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <EditText
-            android:hint="Ngày vào làm"
+            android:hint="ID"
+            android:id="@+id/edtID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/edtEmail"
+            android:hint="Email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/edtPass"
+            android:hint="Pass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/edtHoTen"
+            android:hint="Họ tên"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/edtSDT"
+            android:hint="Số điện thoại"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:textStyle="bold"
+            android:hint="Chức Vụ"
             android:enabled="false"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:id="@+id/edtNgayVaoLam"
+            android:id="@+id/edtTenChucVuDangKy"
             />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Chọn ngày"
-            android:id="@+id/btnChonDate"
-            android:layout_alignBottom="@+id/in_date"
-            android:layout_toRightOf="@+id/in_date"
-            android:layout_toEndOf="@+id/in_date" />
 
+        <LinearLayout
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <EditText
+                android:hint="Ngày vào làm"
+                android:enabled="false"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/edtNgayVaoLam"
+                />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Chọn ngày"
+                android:id="@+id/btnChonDate"
+                android:layout_alignBottom="@+id/in_date"
+                android:layout_toRightOf="@+id/in_date"
+                android:layout_toEndOf="@+id/in_date" />
+
+        </LinearLayout>
     </LinearLayout>
 
     <Button
+        android:layout_gravity="center"
         android:text="THÊM"
         android:id="@+id/btnDK"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
