--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -32,8 +32,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <EditText
+            android:inputType="textPassword"
             android:id="@+id/edtPass"
-            android:hint="Pass"
+            android:hint="Mật khẩu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <EditText
@@ -46,17 +47,13 @@
             android:hint="Số điện thoại"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:textStyle="bold"
-            android:hint="Chức Vụ"
-            android:enabled="false"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/edtTenChucVuDangKy"
-            />
+
+        <Spinner
+            android:id="@+id/spinnerChucVu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        </Spinner>
 
 
         <LinearLayout
