--- a/app/src/main/res/layout/fragment_ban_be.xml
+++ b/app/src/main/res/layout/fragment_ban_be.xml
@@ -26,11 +26,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/avaChatNhom"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 app:civ_border_width="1dp"
-                android:src="@drawable/coffeetek"
+
                 />
             <LinearLayout
                 android:paddingStart="3dp"
