--- a/app/src/main/res/layout/fragment_ca_nhan.xml
+++ b/app/src/main/res/layout/fragment_ca_nhan.xml
@@ -173,6 +173,11 @@
                 android:text="Phục Vụ"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/btnQuanLyPanel"
+                android:text="QUẢN LÝ PANEL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
 
         </LinearLayout>
