--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -68,6 +68,7 @@
                 android:layout_height="0.7dp"
                 android:background="#d3dfef"/>
             <TextView
+                android:id="@+id/txtQuenMatKhau"
                 android:layout_weight="1"
                 android:layout_gravity="right"
                 android:layout_marginTop="14dp"
