--- a/app/src/main/res/layout/fragment_theo_doi.xml
+++ b/app/src/main/res/layout/fragment_theo_doi.xml
@@ -34,14 +34,28 @@
         android:layout_weight="1"
         android:gravity="right|bottom"
         android:orientation="horizontal" >
-        <TextView
-            android:id="@+id/txtTheoDoiSoTienLuong"
-            android:layout_marginRight="35dp"
-            android:textSize="25sp"
-            android:textStyle="bold"
+       <LinearLayout
+           android:orientation="vertical"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content">
+           <TextView
+               android:id="@+id/txtTheoDoiSoTienLuong"
+               android:layout_marginRight="35dp"
+               android:textSize="25sp"
+               android:textStyle="bold"
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content" />
+           <TextView
+               android:id="@+id/txtTheoDoiSoGioCong"
+               android:layout_marginRight="35dp"
+               android:textSize="25sp"
+               android:textStyle="bold"
+
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content" />
+       </LinearLayout>
+
         <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/btnTinhLuong"
 
