--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -41,7 +41,6 @@
                 android:layout_marginTop="16dp"
                 android:background="#00000000"
                 android:hint="Email"
-                android:text="cayvietchi@gmail.com"
                 android:textColorHint="#24272b"
                 android:textSize="15sp" />
 
@@ -57,21 +56,30 @@
                 android:hint="Mật khẩu"
                 android:textSize="15sp"
                 android:inputType="textPassword"
-                android:text="9553185"
                 android:id="@+id/edtPassDN"
                 android:textColorHint="#4b5461"
                 android:background="#00000000"
                 android:layout_marginTop="35dp"/>
+            <CheckBox
+                android:layout_marginTop="3dp"
+                android:id="@+id/saveLoginCheckBox"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/editTextPassword"
+                android:text="Ghi nhớ đăng nhập"
+                android:textColor="#020202" />
             <View
                 android:layout_marginTop="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="0.7dp"
                 android:background="#d3dfef"/>
+
             <TextView
                 android:id="@+id/txtQuenMatKhau"
                 android:layout_weight="1"
                 android:layout_gravity="right"
-                android:layout_marginTop="14dp"
+                android:layout_marginTop="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Quên mật khẩu?"
