--- a/app/src/main/res/layout/activity_quan_ly_luong_mot_nguoi.xml
+++ b/app/src/main/res/layout/activity_quan_ly_luong_mot_nguoi.xml
@@ -15,10 +15,19 @@
         android:layout_height="50dp"
         >
     </android.support.v7.widget.Toolbar>
-    <Spinner
-        android:id="@+id/spinnerTheoDoi1"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"></Spinner>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+        <Spinner
+            android:id="@+id/spinnerTheoDoi1"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"></Spinner>
+        <Spinner
+            android:id="@+id/spinnerNam1"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"></Spinner>
+    </LinearLayout>
     <LinearLayout
         android:layout_margin="5dp"
         android:layout_weight="6"
