--- a/app/src/main/res/layout/fragment_theo_doi.xml
+++ b/app/src/main/res/layout/fragment_theo_doi.xml
@@ -13,10 +13,19 @@
 
 
 
-    <Spinner
-        android:id="@+id/spinnerTheoDoi"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"></Spinner>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+        <Spinner
+            android:id="@+id/spinnerTheoDoi"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"></Spinner>
+        <Spinner
+            android:id="@+id/spinnerNam"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"></Spinner>
+    </LinearLayout>
    <LinearLayout
        android:layout_margin="5dp"
        android:layout_weight="6"
