--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,6 +26,7 @@
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp">
 
+
             <TextView
                 android:layout_marginTop="12dp"
                 android:layout_width="wrap_content"
@@ -32,34 +34,33 @@
                 android:text="Welcome back!"
                 android:textColor="#3e4a59"
                 android:textSize="30sp"/>
-
-
-            <EditText
-                android:id="@+id/edtEmailDN"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="16dp"
-                android:background="#00000000"
-                android:hint="Email"
-                android:textColorHint="#24272b"
-                android:textSize="15sp" />
-
-            <View
-                android:layout_marginTop="17dp"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#c28e79"/>
-
-            <EditText
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Mật khẩu"
-                android:textSize="15sp"
-                android:inputType="textPassword"
-                android:id="@+id/edtPassDN"
-                android:textColorHint="#4b5461"
-                android:background="#00000000"
-                android:layout_marginTop="35dp"/>
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
+                <EditText android:id="@+id/edtEmailDN"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textEmailAddress"
+                    android:hint="Email" />
+            </android.support.design.widget.TextInputLayout>
+
+            <!-- Password Label -->
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
+                <EditText android:id="@+id/edtPassDN"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:hint="Mật Khẩu"/>
+            </android.support.design.widget.TextInputLayout>
+
+
+
             <CheckBox
                 android:layout_marginTop="3dp"
                 android:id="@+id/saveLoginCheckBox"
@@ -79,39 +80,23 @@
                 android:id="@+id/txtQuenMatKhau"
                 android:layout_weight="1"
                 android:layout_gravity="right"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="3dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Quên mật khẩu?"
                 android:textColor="#b98068"
                 android:textSize="15sp" />
+            <mehdi.sakout.fancybuttons.FancyButton
+                android:layout_marginTop="7dp"
+                android:id="@+id/btnDangNhap"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+            </mehdi.sakout.fancybuttons.FancyButton>
         </LinearLayout>
 
-        <RelativeLayout
-            android:layout_width="240dp"
-            android:layout_height="50dp"
-            android:background="@drawable/custombtn"
-            android:clickable="true">
 
-            <Button
 
-                android:id="@+id/btnDangNhap"
-                android:layout_width="wrap_content"
-                android:layout_height="64dp"
-                android:layout_centerInParent="true"
-                android:background="@color/colorPrimaryDark"
-                android:drawableLeft="@drawable/ic_checkin"
-                android:drawablePadding="6dp"
-                android:drawableTint="@color/white"
-                android:duplicateParentState="true"
-
-                android:gravity="center"
-                android:text="Đăng Nhập"
-                android:textColor="@color/white"
-                android:textSize="15sp" />
-
-        </RelativeLayout>
 
     </LinearLayout>
 
