--- a/app/src/main/res/layout/layout_slashscreen.xml
+++ b/app/src/main/res/layout/layout_slashscreen.xml
@@ -7,8 +7,9 @@
     tools:context=".View.SlashScreenActivity"
     android:orientation="vertical">
     <ImageView
+        android:scaleType="fitXY"
         android:id="@+id/slashscreen"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent" />
 
 
